# server/api/openapi-with-docs.json
@@ -124,7 +124,12 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
       }
     },
     "/GetBoardsForGame": {
@@ -157,7 +162,14 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
       }
     },
     "/GetBoardsForPlayer": {
@@ -190,7 +202,42 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
+      }
+    },
+    "/GetMyBoards": {
+      "get": {
+        "tags": [
+          "Board"
+        ],
+        "operationId": "Board_GetMyBoards",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Board"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
       }
     },
     "/GetActiveGame": {
@@ -210,7 +257,12 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
       }
     },
     "/GetGamesHistory": {
@@ -233,7 +285,14 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
       }
     },
     "/SetWinningNumbers": {
@@ -265,7 +324,14 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
       }
     },
     "/CreatePlayer": {
@@ -297,7 +363,14 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
       }
     },
     "/GetPlayers": {
@@ -331,7 +404,14 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
       }
     },
     "/GetPlayerById": {
@@ -361,7 +441,14 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
       }
     },
     "/ActivatePlayer": {
@@ -391,7 +478,14 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
       }
     },
     "/DeactivatePlayer": {
@@ -421,7 +515,14 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
       }
     },
     "/DeletePlayer": {
@@ -451,7 +552,14 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
       }
     },
     "/UpdatePlayer": {
@@ -483,7 +591,14 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
       }
     },
     "/CreateTransaction": {
@@ -515,7 +630,12 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
       }
     },
     "/ApproveTransaction": {
@@ -545,7 +665,14 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
       }
     },
     "/RejectTransaction": {
@@ -575,25 +702,22 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
       }
     },
-    "/GetTransactionsForPlayer": {
+    "/GetMyTransactions": {
       "get": {
         "tags": [
           "Transactions"
         ],
-        "operationId": "Transactions_GetTransactionsForPlayer",
-        "parameters": [
-          {
-            "name": "playerId",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            },
-            "x-position": 1
-          }
-        ],
+        "operationId": "Transactions_GetMyTransactions",
         "responses": {
           "200": {
             "description": "",
@@ -608,7 +732,12 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
       }
     },
     "/GetPendingTransactions": {
@@ -631,7 +760,39 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
+      }
+    },
+    "/GetMyBalance": {
+      "get": {
+        "tags": [
+          "Transactions"
+        ],
+        "operationId": "Transactions_GetMyBalance",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PlayerBalanceResponseDto"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
       }
     },
     "/GetPlayerBalance": {
@@ -661,7 +822,14 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": [
+              "Admin"
+            ]
+          }
+        ]
       }
     }
   },
@@ -940,15 +1108,10 @@
         "type": "object",
         "additionalProperties": false,
         "required": [
-          "playerId",
           "gameId",
           "numbers"
         ],
         "properties": {
-          "playerId": {
-            "type": "string",
-            "minLength": 1
-          },
           "gameId": {
             "type": "string",
             "minLength": 1
@@ -1081,6 +1244,12 @@
             "format": "int32"
           }
         }
+      },
+      "SieveConstants": {
+        "type": "object",
+        "description": "String constants from SieveConstants",
+        "additionalProperties": false,
+        "x-constant-values": {}
       }
     },
     "securitySchemes": {
